# dps_meter

./: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
integration_test/: simple_test.dart
lib/: main.dart
rust/: Cargo.toml
rust/src/api/: mod.rs  screenshot.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_dps_meter.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_dps_meter.podspec
rust_builder/windows/: CMakeLists.txt
